# https-github.com-oslometdata1300-oblig2-python-setup-hello-health-app-Ayanjey

Data1300-oblig2-health_app/: README.md  pyproject.toml
Data1300-oblig2-health_app/src/health_app/: __init__.py  data.py  health.py  main.py
Data1300-oblig2-health_app/tests/: test_data.py  test_health.py
