#her skriver jeg metadataen til prosjektet


[tool.poetry] #fordi jeg bruker poetry.
Name = "health_app"
Version = "0.1.0" #bruker "0.1.0" siden dette er mitt første prosjekt
Description = "A health application that helps track bmi"
Authors = ["Ayan Jeylani,  <ayjey4059@oslomet.com>"]
dependencies =  "^python= 3.11.5" 
#her er jeg usikker på om jeg har skrevet riktig

 